Fix password bug in employee adn ownerupdateview

--- a/src/myhouse_admin/templates/flats/flat_update.html
+++ b/src/myhouse_admin/templates/flats/flat_update.html
@@ -2,7 +2,7 @@
 
 {% load static widget_tweaks %}
 
-{% block title %}{{flat.to_string}}{% endblock title %}
+{% block title %}Квартира {{flat.to_string}}{% endblock title %}
 
 {% block flats %}bg-light{% endblock flats %}
 
@@ -11,12 +11,12 @@
 {% block main_content %}
 <div class="container-fluid">
     <section class="content-header d-flex justify-content-between">
-        <h1>{{flat.to_string}}</h1>
+        <h1>Квартира {{flat.to_string}}</h1>
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:index' %}" class="text-dark"><i class="fa fa-home"></i> Главная</a></li>
                 <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:flat_list' %}" class="text-dark">Квартиры</a></li>
-                <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:flat_detail' flat.pk %}" class="text-dark">{{flat.to_string}}</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:flat_detail' flat.pk %}" class="text-dark">Квартира {{flat.to_string}}</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Редактирование</li>
             </ol>
         </nav>
