--- a/src/myhouse_admin/templates/cashbox/cb_list.html
+++ b/src/myhouse_admin/templates/cashbox/cb_list.html
@@ -83,7 +83,7 @@
         </div>
         <div class="card-body table-responsive p-0">
             {% csrf_token %}
-            <table class="table table-bordered table-hover">
+            <table class="table table-bordered table-striped" id="id_cashbox_table">
                 <thead>
                     <tr>
                         <th>№</th>
@@ -96,14 +96,19 @@
                         <th>Сумма (грн)</th>
                         <th></th>
                     </tr>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        {% comment %} <td></td>
-                        <td>{% render_field house_search_form.house_name_search_field class="form-control"%}</td>
-                        <td>{% render_field house_search_form.house_address_search_field class="form-control" %}</td>
-                        <td></td> {% endcomment %}
-                    </tr>
                 {% for cashbox_record in cashbox_records %}
                     <tr data-href="{% url 'myhouse_admin:cashbox_record_detail' cashbox_record.pk %}">
                         <td>{{cashbox_record.number}}</td>
@@ -147,10 +152,22 @@
                 </tbody>
             </table>
         </div>
+        {% if cashbox_records %}
+        <div class="card-footer">
+            <div class="row"></div>
+            <div class="row">
+                Проведен приход:<span><strong>{{sum_in|stringformat:".2f"}} грн.</strong></span>
+            </div>
+            <div class="row">
+                Проведен расход:<span><strong>{{sum_out|stringformat:".2f"}} грн.</strong></span>
+            </div>
+        </div>
+        {% endif %}
     </div>
 </div>
 {% endblock main_content %}
 
 {% block extra_js %}
+    <script src="https://cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>
     <script src="{% static 'js/admin/cashbox/cb_list.js' %}" type="module"></script>
 {% endblock extra_js %}
