--- a/src/myhouse_admin/templates/flats/flat_list.html
+++ b/src/myhouse_admin/templates/flats/flat_list.html
@@ -29,7 +29,7 @@
         </div>
         <div class="card-body table-responsive p-0">
             {% csrf_token %}
-            <table class="table table-bordered table-hover">
+            <table class="table table-bordered table-hover" id="id_flat_table">
                 <thead>
                     <tr>
                         <th>№ квартиры</th>
@@ -40,14 +40,17 @@
                         <th>Остаток (грн)</th>
                         <th></th>
                     </tr>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        {% comment %} <td></td>
-                        <td>{% render_field house_search_form.house_name_search_field class="form-control"%}</td>
-                        <td>{% render_field house_search_form.house_address_search_field class="form-control" %}</td>
-                        <td></td> {% endcomment %}
-                    </tr>
                 {% for flat in flats %}
                     <tr data-href="{% url 'myhouse_admin:flat_detail' flat.pk %}">
                         <td>{{flat.number}}</td>
@@ -73,10 +76,19 @@
                 </tbody>
             </table>
         </div>
+        {% if flats %}
+        <div class="card-footer">
+            <div class="row"></div>
+            <div class="row">
+                Количество квартир:<span><strong>{{flats.count}}</strong></span>
+            </div>
+        </div>
+        {% endif %}
     </div>
 </div>
 {% endblock main_content %}
 
 {% block extra_js %}
+    <script src="https://cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>
     <script src="{% static 'js/admin/flats/flat_list.js' %}" type="module"></script>
 {% endblock extra_js %}
