--- a/src/myhouse_admin/templates/personal_accounts/pa_list.html
+++ b/src/myhouse_admin/templates/personal_accounts/pa_list.html
@@ -82,7 +82,7 @@
         </div>
         <div class="card-body table-responsive p-0">
             {% csrf_token %}
-            <table class="table table-bordered table-hover">
+            <table class="table table-bordered table-hover" id="id_pa_table">
                 <thead>
                     <tr>
                         <th>№</th>
@@ -94,14 +94,18 @@
                         <th>Остаток (грн)</th>
                         <th></th>
                     </tr>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        {% comment %} <td></td>
-                        <td>{% render_field house_search_form.house_name_search_field class="form-control"%}</td>
-                        <td>{% render_field house_search_form.house_address_search_field class="form-control" %}</td>
-                        <td></td> {% endcomment %}
-                    </tr>
                 {% for personal_account in personal_accounts %}
                     <tr data-href="{% url 'myhouse_admin:personal_account_detail' personal_account.pk %}">
                         <td>{{personal_account.uid}}</td>
@@ -134,10 +138,19 @@
                 </tbody>
             </table>
         </div>
+        {% if personal_accounts %}
+        <div class="card-footer">
+            <div class="row"></div>
+            <div class="row">
+                Количество счетов: <span><strong>{{personal_accounts.count}}</strong></span>
+            </div>
+        </div>
+        {% endif %}
     </div>
 </div>
 {% endblock main_content %}
 
 {% block extra_js %}
+    <script src="https://cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>
     <script src="{% static 'js/admin/personal_accounts/personal_account_list.js' %}" type="module"></script>
 {% endblock extra_js %}
