--- a/src/myhouse_admin/templates/tickets/ticket_list.html
+++ b/src/myhouse_admin/templates/tickets/ticket_list.html
@@ -29,7 +29,7 @@
         </div>
         <div class="card-body table-responsive p-0">
             {% csrf_token %}
-            <table class="table table-bordered table-hover">
+            <table class="table table-bordered table-hover" id="id_ticket_table">
                 <thead>
                     <tr>
                         <th>№ заявки</th>
@@ -43,14 +43,20 @@
                         <th>Статус</th>
                         <th></th>
                     </tr>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        {% comment %} <td></td>
-                        <td>{% render_field house_search_form.house_name_search_field class="form-control"%}</td>
-                        <td>{% render_field house_search_form.house_address_search_field class="form-control" %}</td>
-                        <td></td> {% endcomment %}
-                    </tr>
                 {% for ticket in tickets %}
                     <tr data-href="{% url 'myhouse_admin:master_request_detail' ticket.pk %}">
                         <td>{{ticket.pk}}</td>
@@ -94,5 +100,6 @@
 {% endblock main_content %}
 
 {% block extra_js %}
+    <script src="https://cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>
     <script src="{% static 'js/admin/tickets/ticket_list.js' %}" type="module"></script>
 {% endblock extra_js %}
