create receipts and calculation formulas

--- a/src/myhouse_admin/templates/cashbox/cbr_create.html
+++ b/src/myhouse_admin/templates/cashbox/cbr_create.html
@@ -2,7 +2,7 @@
 
 {% load static widget_tweaks %}
 
-{% block title %}Новая приходная ведомость{% endblock title %}
+{% block title %}Новая {{type_name}} ведомость{% endblock title %}
 
 {% block cashbox %}bg-light{% endblock cashbox %}
 
@@ -11,12 +11,12 @@
 {% block main_content %}
 <div class="container-fluid">
     <section class="content-header d-flex justify-content-between">
-        <h1 class="ml-2">Новая приходная ведомость</h1>
+        <h1 class="ml-2">Новая {{type_name}} ведомость</h1>
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:index' %}" class="text-dark"><i class="fa fa-home"></i> Главная</a></li>
                 <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:cashbox_list' %}" class="text-dark">Платежи</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Новая приходная ведомость</li>
+                <li class="breadcrumb-item active" aria-current="page">Новая {{type_name}} ведомость</li>
             </ol>
         </nav>
     </section>
