--- a/src/myhouse_admin/templates/cashbox/cbr_update.html
+++ b/src/myhouse_admin/templates/cashbox/cbr_update.html
@@ -2,7 +2,7 @@
 
 {% load static widget_tweaks %}
 
-{% block title %}Приходная ведомость{% endblock title %}
+{% block title %}{{type_name}} ведомость{% endblock title %}
 
 {% block cashbox %}bg-light{% endblock cashbox %}
 
@@ -11,12 +11,12 @@
 {% block main_content %}
 <div class="container-fluid">
     <section class="content-header d-flex justify-content-between">
-        <h1 class="ml-2">Приходная ведомость</h1>
+        <h1 class="ml-2">{{type_name}} ведомость</h1>
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:index' %}" class="text-dark"><i class="fa fa-home"></i> Главная</a></li>
                 <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:cashbox_list' %}" class="text-dark">Платежи</a></li>
-                <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:cashbox_record_detail' form.instance.pk %}" class="text-dark">Приходная ведомость №{{form.instance.number}}</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:cashbox_record_detail' form.instance.pk %}" class="text-dark">{{type_name}} ведомость №{{form.instance.number}}</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Редактирование</li>
             </ol>
         </nav>
