--- a/src/myhouse_admin/templates/meters/meter_list.html
+++ b/src/myhouse_admin/templates/meters/meter_list.html
@@ -29,7 +29,7 @@
         </div>
         <div class="card-body table-responsive p-0">
             {% csrf_token %}
-            <table class="table table-bordered table-hover" id="id_meter_table">
+            <table class="table table-bordered table-striped" id="id_meter_table">
                 <thead>
                     <tr>
                         <th>Дом</th>
