--- a/src/myhouse_admin/templates/meters/meter_reading_list.html
+++ b/src/myhouse_admin/templates/meters/meter_reading_list.html
@@ -30,7 +30,7 @@
         </div>
         <div class="card-body table-responsive p-0">
             {% csrf_token %}
-            <table class="table table-bordered table-hover" id="id_meter_reading_table">
+            <table class="table table-bordered table-striped" id="id_meter_reading_table">
                 <thead>
                     <tr>
                         <th>№</th>
