--- a/src/myhouse_admin/templates/cashbox/cbr_form.html
+++ b/src/myhouse_admin/templates/cashbox/cbr_form.html
@@ -66,7 +66,7 @@
                         </div>
                         <div class="form-group g-3">
                             <label for="{{form.summary.auto_id}}" class="form-label">Сумма</label>
-                            {% render_field form.summary class='form-control is-invalid' min="0" %}
+                            {% render_field form.summary class='form-control is-invalid' min="0" max=max_sum %}
                         </div>
                     </div>
                     <div class="col-md-6">
