--- a/src/myhouse_admin/templates/personal_accounts/pa_list.html
+++ b/src/myhouse_admin/templates/personal_accounts/pa_list.html
@@ -4,7 +4,7 @@
 
 {% block title %}Лицевые счета{% endblock title %}
 
-{% block flats %}bg-light{% endblock flats %}
+{% block personal_accounts %}bg-light{% endblock personal_accounts %}
 
 {% block main_content %}
 <section class="content-header d-flex justify-content-between">
@@ -21,45 +21,7 @@
     <div class="row">
         <div class="col-lg-9">
             <div class="row">
-                <div class="col-md-4">
-                    <div class="small-box bg-success">
-                        <div class="inner">
-                            <h3>? грн.</h3>
-                            <p>Состояние кассы</p>
-                        </div>
-                        <div class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-currency-dollar" viewBox="0 0 16 16">
-                                <path d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718H4zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73l.348.086z"/>
-                            </svg>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="small-box bg-primary">
-                        <div class="inner">
-                            <h3>? грн.</h3>
-                            <p>Баланс по счетам</p>
-                        </div>
-                        <div class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-currency-dollar" viewBox="0 0 16 16">
-                                <path d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718H4zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73l.348.086z"/>
-                            </svg>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="small-box bg-danger">
-                        <div class="inner">
-                            <h3>? грн.</h3>
-                            <p>Задолженность по счетам</p>
-                        </div>
-                        <div class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-currency-dollar" viewBox="0 0 16 16">
-                                <path d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718H4zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73l.348.086z"/>
-                            </svg>
-                        </div>
-                    </div>
-                </div>
+                {% include 'layout/cashbox_statistics.html' %}
             </div>
         </div>
         <div class="col-lg-3">
@@ -82,7 +44,7 @@
         </div>
         <div class="card-body table-responsive p-0">
             {% csrf_token %}
-            <table class="table table-bordered table-hover" id="id_pa_table">
+            <table class="table table-bordered table-striped" id="id_pa_table">
                 <thead>
                     <tr>
                         <th>№</th>
@@ -120,7 +82,19 @@
                         <td>{{personal_account.flat.floor.section.house}}</td>
                         <td>{{personal_account.flat.floor.section}}</td>
                         <td>{{personal_account.flat.owner}}</td>
-                        <td>{{personal_account.summary|stringformat:".2f"}}</td>
+                        <td>
+                            {% if personal_account.flat is not None %}
+                                {% if personal_account.flat.balance > 0 %}
+                                    <span class="text-success">{{personal_account.flat.balance|stringformat:".2f"}}</span>
+                                {% elif personal_account.flat.balance < 0 %}
+                                    <span class="text-danger">{{personal_account.flat.balance|stringformat:".2f"}}</span>
+                                {% else %}
+                                    <span>{{personal_account.flat.balance|stringformat:".2f"}}</span>
+                                {% endif %}
+                            {% else %}
+                                <span>0.00</span>
+                            {% endif %}
+                        </td>
                         <td>
                             <div class="btn-group">
                                 <a href="{% url 'myhouse_admin:personal_account_update' personal_account.pk %}" class="btn btn-default">
