--- a/src/myhouse_admin/templates/receipts/receipt_list.html
+++ b/src/myhouse_admin/templates/receipts/receipt_list.html
@@ -21,45 +21,7 @@
     <div class="row">
         <div class="col-lg-9">
             <div class="row">
-                <div class="col-md-4">
-                    <div class="small-box bg-success ml-2">
-                        <div class="inner">
-                            <h3>? грн.</h3>
-                            <p>Состояние кассы</p>
-                        </div>
-                        <div class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-currency-dollar" viewBox="0 0 16 16">
-                                <path d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718H4zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73l.348.086z"/>
-                            </svg>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="small-box bg-primary">
-                        <div class="inner">
-                            <h3>? грн.</h3>
-                            <p>Баланс по счетам</p>
-                        </div>
-                        <div class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-currency-dollar" viewBox="0 0 16 16">
-                                <path d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718H4zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73l.348.086z"/>
-                            </svg>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="small-box bg-danger">
-                        <div class="inner">
-                            <h3>? грн.</h3>
-                            <p>Задолженность по счетам</p>
-                        </div>
-                        <div class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-currency-dollar" viewBox="0 0 16 16">
-                                <path d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718H4zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73l.348.086z"/>
-                            </svg>
-                        </div>
-                    </div>
-                </div>
+                {% include 'layout/cashbox_statistics.html' %}
             </div>
         </div>
         <div class="col-lg-3">
@@ -82,7 +44,7 @@
         </div>
         <div class="card-body table-responsive p-0">
             {% csrf_token %}
-            <table class="table table-bordered table-hover">
+            <table class="table table-bordered table-striped" id="id_receipts_table">
                 <thead>
                     <tr>
                         <th></th>
@@ -96,16 +58,22 @@
                         <th>Сумма (грн)</th>
                         <th></th>
                     </tr>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        {% comment %} <td></td>
-                        <td>{% render_field house_search_form.house_name_search_field class="form-control"%}</td>
-                        <td>{% render_field house_search_form.house_address_search_field class="form-control" %}</td>
-                        <td></td> {% endcomment %}
-                    </tr>
                 {% for receipt in receipts %}
-                    <tr data-href="{% url 'myhouse_admin:cashbox_record_detail' receipt.pk %}">
+                    <tr data-href="{% url 'myhouse_admin:receipt_detail' receipt.pk %}">
                         <td></td>
                         <td>{{receipt.number}}</td>
                         {% if receipt.status == '3' %}
@@ -115,8 +83,8 @@
                         {% elif receipt.status == '2' %}
                             <td><span class="badge badge-warning">{{ receipt.get_status_display }}</span></td>
                         {% endif %}
-                        <td>{{receipt.date|date:"d.m.Y"}}</td>
-                        <td>{{receipt.date|date:"F Y"}}</td>
+                        <td>{{receipt.creation_date|date:"d.m.Y"}}</td>
+                        <td>{{receipt.creation_date|date:"F Y"}}</td>
                         <td>{{receipt.flat.to_string}}</td>
                         <td>{{receipt.flat.owner}}</td>
                         <td>
@@ -128,14 +96,18 @@
                         </td>
                         <td>{{ receipt.summary|stringformat:".2f" }}</td>
                         <td>
-                            {% comment %} <div class="btn-group">
-                                <a href="{% url 'myhouse_admin:cashbox_record_update' cashbox_record.pk %}" class="btn btn-default">
+                            <div class="btn-group">
+                                <a href="{% url 'myhouse_admin:receipt_create' %}?invoice_id={{receipt.pk}}" title="Копировать" class="btn btn-default"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 16 16">
+                                    <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
+                                    <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
+                                </svg></a>
+                                <a href="{% url 'myhouse_admin:receipt_update' receipt.pk %}" title="Редактировать" class="btn btn-default">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
                                         <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
                                     </svg>
                                 </a>
-                                <button type="button" class="btn btn-default delete-cb_record-button" delete-url="{% url 'myhouse_admin:cbr_delete' cashbox_record.pk %}"><i class="fa fa-trash"></i></button>
-                            </div> {% endcomment %}
+                                <button type="button" class="btn btn-default delete-receipt-button" title="Удалить" delete-url="{% url 'myhouse_admin:receipt_delete' receipt.pk %}"><i class="fa fa-trash"></i></button>
+                            </div>
                         </td>
                     </tr>
                 {% empty %}
@@ -149,5 +121,6 @@
 {% endblock main_content %}
 
 {% block extra_js %}
-    <script src="{% static 'js/admin/cashbox/cb_list.js' %}" type="module"></script>
+    <script src="https://cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>
+    <script src="{% static 'js/admin/receipts/receipt_list.js' %}" type="module"></script>
 {% endblock extra_js %}
