--- a/src/myhouse_admin/templates/settings/payment_type/payment_type_list.html
+++ b/src/myhouse_admin/templates/settings/payment_type/payment_type_list.html
@@ -25,7 +25,7 @@
         <div class="card mr-2 ml-2">
             <div class="card-body table-responsive p-0">
                 {% csrf_token %}
-                <table class="table table-bordered table-hover">
+                <table class="table table-bordered table-striped">
                     <thead>
                         <tr>
                             <th>Название</th>
